@@ -74,5 +74,7 @@ module Cairo
   end
 end
 
+require 'cairo/color'
+require 'cairo/colors'
 require 'cairo/context'
 require 'cairo/pattern'
