@@ -1,9 +1,17 @@
 2007-04-16  Kouhei Sutou  <kou@cozmixng.org>
 
+	* misc/update-colors.rb: added colors.rb generator that extracts
+	popular colors from Wikipedia:List_of_colors page.
+
+	* src/lib/cairo/colors.rb: added popular colors generated by
+	updated-colors.rb.
+
 	* src/lib/cairo/color.rb: added high-level color class including
 	CMYK support.
 
-	* src/rb_cairo_pattern.c: supported Cairo::Color.
+	* src/rb_cairo_pattern.c, src/lib/cairo.rb,
+	src/lib/cairo/context.rb, src/lib/cairo/pattern.rb: supported
+	Cairo::Color.
 
 2007-04-15  Kouhei Sutou  <kou@cozmixng.org>
 
